--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "apidoc": {
     "title": "Node Server API Documentation"
   },
+  "scripts": {
+    "start": "node server/app.js"
+  },
   "dependencies": {
     "bluebird": "^3.3.1",
     "body-parser": "^1.14.2",
@@ -14,5 +17,9 @@
     "mongoose": "^4.3.5",
     "mongoose-timestamp": "^0.5.0",
     "morgan": "^1.6.1"
+  },
+  "engines": {
+    "node": "4.4.7",
+    "npm":"3.10.5"
   }
 }
